--- a/views/index.pug
+++ b/views/index.pug
@@ -10,4 +10,8 @@ block content
 					a(class="btn btn-default" href="#/Assignment1") Assignment1
 				li(role="presentation")
 					a(class="btn btn-default" href="#/Assignment2") Assignment2
+				li(role="presentation")
+					a(class="btn btn-default" href="#/Assignment5") Assignment5
+				li(role="presentation")
+					a(class="btn btn-default" href="#/UiGrid") Ui Grid
 		div(ng-view="")
