--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,13 @@
 a {
   color: #00B7FF;
 }*/
+
+.DragArea{
+color:black;
+font-size:24px;
+text-align:center;
+height:100px;
+margin:auto;
+width:80%;
+background-color:aquamarine;
+}
