--- a/views/index.pug
+++ b/views/index.pug
@@ -11,6 +11,8 @@ block content
 				li(role="presentation")
 					a(class="btn btn-default" href="#/Assignment2") Assignment2
 				li(role="presentation")
+					a(class="btn btn-default" href="#/Assignment4") Assignment4
+				li(role="presentation")
 					a(class="btn btn-default" href="#/Assignment5") Assignment5
 				li(role="presentation")
 					a(class="btn btn-default" href="#/UiGrid") Ui Grid
