--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,9 @@ html(ng-app="AngularApp")
     script(src="/scripts/lib/angular-route.min.js")
     script(src="/scripts/lib/ui-bootstrap-tpls-1.3.3.min.js")
     script(src="/scripts/lib/ui-grid.min.js")
-    script(src="/scripts/lib/moment.js") 
+    script(src="/scripts/lib/angular-mocks.js")
+    script(src="/scripts/lib/jasmine.js")
+    script(src="/scripts/lib/moment.js")
     script(src="app.js")
   body
     block content
@@ -20,6 +22,9 @@ html(ng-app="AngularApp")
     script(src="/modules/Assignment1/Assignment1.controller.js")
     script(src="/modules/Assignment2/Assignment2.module.js")
     script(src="/modules/Assignment2/Assignment2.controller.js")
+    script(src="/modules/Assignment4/Assignment4.module.js")
+    script(src="/modules/Assignment4/Assignment4.service.js")
+    script(src="/modules/Assignment4/Assignment4.controller.js")
     script(src="/modules/Assignment5/Assignment5.module.js")
     script(src="/modules/Assignment5/Assignment5.service.js")
     script(src="/modules/Assignment5/Assignment5.controller.js")    
