Assignment2,4 completed and assignment 7 added

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,3 +31,6 @@ html(ng-app="AngularApp")
     script(src="/modules/UiGrid/UiGrid.module.js")
     script(src="/modules/UiGrid/UiGrid.service.js")
     script(src="/modules/UiGrid/UiGrid.controller.js")
+    script(src="/modules/Assignment7/Assignment7.module.js")
+    script(src="/modules/Assignment7/Assignment7.service.js")
+    script(src="/modules/Assignment7/Assignment7.controller.js")
