--- a/public/modules/Assignment2/uiRouterProject/templates/user.html
+++ b/public/modules/Assignment2/uiRouterProject/templates/user.html
@@ -1,36 +1,40 @@
 <div>
 
-<form>
-  <input type="radio" name="gender" value="male" checked> Male<br>
-  <input type="radio" name="gender" value="female"> Female<br>
-  <input type="radio" name="gender" value="other"> Other  
-</form> 
+  <div class="row">
+  <div class="col-md-offset-2 col-md-4">
+	<h3>Date Filter to Format Data</h3>
+  <ol>
+<li>{{dateObj | date: 'MMMM dd, yyyy'}}</li>
+<li>{{dateObj | date: 'MMM dd, yyyy'}}</li>
+<li>{{dateObj | date: 'EEEE dd-MM-yy, HH:mm:ss'}}</li>
+<li>{{dateObj | date: 'EEE dd.mm.yyyy hh:mm:ss a'}}</li>
+  </ol>
+  </div>
+  </div>
 
-	<p>Date Filter to Format Data</p>
-	{{dateObj | date:'shortDate'}}
-
+  <div class="row">
+    <div class=" col-sm-offset-2 col-sm-4">
+<h3>Custom Filter</h3>
+</div>
+  </div>
 	<div class="row">
-	
-	<div class=" col-sm-offset-2 col-sm-3">
+	<div class=" col-sm-offset-2 col-sm-4">
 	<form name="SearchOptions">
-	<input ng-model="searchBook.filters" type="radio" value="search"> Search By Any Field
+	<!-- <input ng-model="searchBook.filters" type="radio" value="searchByAnything"> Search By Any Field
 	<br/>
-	<input ng-model="searchBook.filters" type="radio" value="search.Name"> Search by Book Name
+	<input ng-model="searchBook.filters" type="radio" value="searchByName"> Search by Book Name
 	<br/>
-	<input ng-model="searchBook.filters" type="radio" value="query"> Search by Book/Author Name
+	<input ng-model="searchBook.filters" type="radio" value="searchByNameorAuthor"> Search by Book/Author Name
 	<br/>
-	{{searchBook}}{{2+2}}{{searchBook.filters}}
+  {{searchBook.filters}} -->
+  <select class="form-control" ng-model="SelectFilter" ng-options="search.Value as search.Label for search in searchBook"></select>
 	</div>
-	
 	<div class="col-sm-4">
-	<input class="form-control" type="text" placeholder="Type here to search .."  ng-model="searchBook["filters"]"/>
+	<input class="form-control" type="text" placeholder="Type here to search .." ng-model="query" />
 	</div>
-	
 	</form>
-	
-	
 	</div>
-	
+
 	<div class="row">
 	<div class=" col-sm-offset-2 col-sm-8">
 	<table class="table">
@@ -41,7 +45,7 @@
 			<th>Price</th>
 		</thead>
 		<tbody>
-		<tr ng-repeat="buk in books | filter:search">
+		<tr ng-repeat="buk in books | filter: MySearch">
 			<td>{{$index+1}}</td>
 			<td>{{buk.Name}}</td>
 			<td>{{buk.Author}}</td>
