Index.pug added

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,4 +16,6 @@ block content
 					a(class="btn btn-default" href="#/Assignment5") Assignment5
 				li(role="presentation")
 					a(class="btn btn-default" href="#/UiGrid") Ui Grid
+				li(role="presentation")
+					a(class="btn btn-default" href="#/Assignment7") Assignment7
 		div(ng-view="")
